# photo-collage

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/superpowers/specs/: 2026-06-18-photo-pan-at-scale-1-design.md
src/: App.tsx  exportCanvas.ts  index.css  layouts.ts  resize.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: CellStylePanel.tsx  Dropzone.tsx  FilterPanel.tsx  LayoutPicker.tsx  PhotoCell.tsx  ShapeLayer.tsx  ShapePanel.tsx  SizeInput.tsx  TextLayer.tsx  TextPanel.tsx
