[package]
name = "photo-collage"
version = "0.1.4"
description = "Drag-and-drop photo collage maker"
authors = ["weiss"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "photo_collage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
base64 = "0.22"
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
